# AutoVideo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  pyproject.toml
.superpowers/sdd/: task-3-report.md
autovideo/: main.py
autovideo/api/: __init__.py  app.py  dependencies.py  errors.py
autovideo/core/: __init__.py  paths.py  runtime.py  settings.py
autovideo/services/: __init__.py  audio_mix.py  material_matcher.py  material_processing.py  material_sources.py  material_worker.py  materials.py  online_downloads.py  online_materials.py  online_mix.py  rendering.py  script_generator.py  script_schema.py  scripts.py  tasks.py
autovideo/storage/: __init__.py  database.py
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  styles.css
scripts/: dev.sh
tests/: conftest.py  test_project_files.py
tests/api/: test_bgm.py  test_health.py  test_material_index.py  test_material_sources.py  test_material_worker_execution.py  test_online_materials.py  test_online_mix.py  test_scripts.py  test_subtitle_templates.py  test_video_tasks.py  test_voices.py
tests/core/: test_paths.py  test_runtime.py  test_settings.py
tests/services/: test_ass_renderer.py  test_audio_mix.py  test_bgm_library.py  test_ffmpeg_burner.py  test_material_matcher.py  test_material_processing.py  test_material_sources.py  test_material_worker_jobs.py  test_online_material_security.py  test_rendering.py  test_script_generator.py  test_subtitle_dsl.py  test_voice_center.py  (+4 more)
(+67 files in other folders)
