[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autovideo"
version = "0.1.0"
description = "Self-hosted video remix workbench."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-only" }
dependencies = [
  "fastapi>=0.115,<1.0",
  "python-multipart>=0.0.20,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic-settings>=2.4,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "httpx>=0.27,<1.0",
]

[project.scripts]
autovideo = "autovideo.main:main"

[tool.setuptools.packages.find]
include = ["autovideo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
